[project]
name = "mpv-whisper"
version = "0.2.0"
description = "Enhances a local MPV instance with Whisper transcription capabilities"
authors = [{ name = "Alex Koay", email = "alexkoay88@gmail.com" }]
requires-python = ">=3.9,<3.13"
readme = "README.md"
classifiers = [
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3.14",
]
dependencies = [
	"attrs>=23.2.0,<24",
	"av>=12.3.0",
	"cattrs>=23.2.3,<24",
	"click>=8.1.7,<9",
	"faster-whisper>=1.0.1,<2",
	"more_itertools>=10.2.0,<11",
	"numpy>=1.26.4,<2",
	"python_mpv_jsonipc>=1.2.0,<2",
	"toml>=0.10.2,<0.11",
]

	[project.urls]
	Repository = "https://github.com/alexkoay/mpv-whisper"

	[project.scripts]
	mpv-whisper = "mpv_whisper.cli:cli"
	mpv-whisper-direct = "mpv_whisper.cli:direct"

[dependency-groups]
dev = [
	"mypy>=1.8.0,<2",
	"pyright>=1.1.352,<2",
	"ruff>=0.3.0,<0.4",
]

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.9.0,<0.10.0"]

[tool.uv.build-backend]
module-name = "mpv_whisper"
module-root = "."


[tool.ruff]
line-length = 100

	[tool.ruff.lint]
	ignore = []
	select = ["E4", "E7", "E9", "F", "I", "PL"]


[tool.pyright]
pythonVersion = "3.9"
